# Customer-service-AI-agent

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  claude_client.py  config.py  fixtures.py  log_context.py  main.py  mcp_client.py  mcp_http.py
app/agents/: __init__.py  incident_agent.py  intake_agent.py  policy_agent.py  report_agent.py  resolution_agent.py
app/cache/: __init__.py  state_store.py
app/llm/: __init__.py  claude_client.py  prompts.py  structured_outputs.py
app/mcp_servers/: __init__.py  backend_server.py  common.py  governance_server.py  knowledge_server.py  observability_server.py
app/orchestration/: __init__.py  state_machine.py
app/pipelines/: __init__.py  run_eval.py  synthesize_cases.py  validate_cases.py
app/schemas/: __init__.py  case.py
app/tools/: __init__.py  audit_tools.py  backend_tools.py  governance_tools.py  incident_tools.py  policy_tools.py  registry.py
tests/: conftest.py  test_api.py  test_claude_client.py  test_config.py  test_intake_agent.py  test_main.py  test_mcp_servers.py  test_orchestrator.py  test_policy_agent.py  test_refund_cases.py  test_report_agent.py  test_smoke.py  test_validation_eval.py
