[project]
name = "claude-workflow-customer-service"
version = "0.1.0"
description = "Support Agent v1 using FastAPI and Claude API."
readme = "TASK.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.8.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
